--- a/css_js/bootstrap-3.3.4-dist/css/bootstrap.css
+++ b/css_js/bootstrap-3.3.4-dist/css/bootstrap.css
@@ -2960,7 +2960,7 @@ th {
 }
 
 .table-hover > tbody > tr:hover {
-    background-color: #f5f5f5;
+    background-color: rgba(1, 204, 255, 0.07);
 }
 
 table col[class*="col-"] {
