--- a/css_js/stylish.css
+++ b/css_js/stylish.css
@@ -612,3 +612,9 @@ input[type="number"].form-control {
         margin: 30px auto;
     }
 }
+
+.my-slider {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
